syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractComplexDeviceComponentDescriptorOneOfType";

import "sdc/biceps/abstractcomplexdevicecomponentdescriptor.proto";
import "sdc/biceps/vmddescriptor.proto";
import "sdc/biceps/mdsdescriptor.proto";

message AbstractComplexDeviceComponentDescriptorOneOf {
  oneof abstract_complex_device_component_descriptor_one_of {
    AbstractComplexDeviceComponentDescriptor abstract_complex_device_component_descriptor = 1;
    VmdDescriptor vmd_descriptor = 2;
    MdsDescriptor mds_descriptor = 3;
  }
}
