syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractDeviceComponentStateProto";

import "sdc/biceps/abstractstate.proto";
import "sdc/biceps/calibrationinfo.proto";
import "sdc/biceps/physicalconnectorinfo.proto";
import "sdc/biceps/componentactivation.proto";
import "google/protobuf/wrappers.proto";

message AbstractDeviceComponentStateMsg {
  AbstractStateMsg abstract_state = 1;
  CalibrationInfoMsg calibration_info = 2;
  CalibrationInfoMsg next_calibration = 3;
  PhysicalConnectorInfoMsg physical_connector = 4;
  ComponentActivationMsg a_activation_state = 5;
  google.protobuf.UInt32Value a_operating_hours = 6;
  google.protobuf.Int32Value a_operating_cycles = 7;
}
